--- a/hellow.html
+++ b/hellow.html
@@ -4,7 +4,7 @@
 	<title>My git home</title>
 </head>
 <body>
-	<h1>This is editted from github</h1>
+	<h1>This is editted from github and local</h1>
 	<p>we are here boys</p>
 </body>
 </html>
